# cimgui-backends

./: CMakeLists.txt  cimgui.cpp  cimgui.h
.github/workflows/: build.yml
generator/: generator_unix.sh  generator_windows.bat  preprocesed.h
generator/output/: cimgui_impl.h  definitions.json  definitions.lua  impl_definitions.json  impl_definitions.lua  structs_and_enums.json  structs_and_enums.lua
